@@ -1,6 +1,15 @@
 2005-08-20  Youchen Lee  <youchen.lee@gmail.com>
 
 	* src/nancy_bot/nancybot.cpp,
+	src/nancy_bot/api.h: Now NancyBot::replaceString() could replace
+	more than one strings.
+	Added "NancyBot Settings HOWTO" in api.h.
+
+	* src/nancy_bot/msgdata.h: Comment fixed.
+
+2005-08-20  Youchen Lee  <youchen.lee@gmail.com>
+
+	* src/nancy_bot/nancybot.cpp,
 	src/nancy_bot/msgdata.cpp,
 	src/nancy_bot/api.h,
 	src/nancy_bot/msgdata.h: Fixed unclear variable and function names about
